--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Fairy tales'
 - !lcsh 'Children''s stories'
+- GITenberg
 title: Prince Prigio
 url: http://www.gutenberg.org/ebooks/20850
